# chilly-rs

./: .gitignore  Cargo.toml  README.md  expand.txt
assets/balt/: sprites.toml
crates/bot/: Cargo.toml  README.md
crates/bot/src/: bot.rs  handler.rs  hooks.rs  main.rs  structures.rs  type_map.rs
crates/bot/src/groups/: general.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs  scene.pest
crates/structures/: README.md
crates/structures/src/: lib.rs
src/: lib.rs  main.rs  solidify.rs  structures.rs  varargs.rs  variants.rs
src/arguments/: argmacro.rs  args.rs  arguments.rs  flags.rs  mod.rs  variants.rs
src/database/: assets.rs  constants.rs  mod.rs  structures.rs
src/parser/: mod.rs  scene.pest  structures.rs
src/renderer/: mod.rs  structures.rs
src/variants/: mod.rs  varargs.rs
tests/: database.rs  parsing.rs
tests/assets/sample/: sprites.toml
tests/assets/sample2/: sprites.toml
tests/notbaba/Data/: values.lua
tests/notbaba/Data/Editor/: editor_objectlist.lua
