workspace = { members = ["crates/bot"] }
[package]
name = "chilly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
displaydoc = "0.2"
itertools = "0.12"
num-traits = "0.2"
thiserror = "1"
anyhow = "1"
toml = { version = "0.8", features = ["parse"] }
