
[package]
name = "chilly"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
displaydoc = "0.2"
itertools = "0.12"
num-traits = "0.2"
thiserror = "1"
anyhow = "1"
paste = "1"
bitflags = "2"

toml = { version = "0.8", features = ["parse"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_repr = { version = "0.1", optional = true }
glob = { version = "0.3", optional = true }
regex-lite = { version = "0.1", optional = true }
once_cell = { version = "1", optional = true }
image = { version = "0.24", optional = true }

[features]
serde = ["dep:serde", "dep:serde_repr"]
assets = ["serde", "dep:glob", "dep:regex-lite", "dep:once_cell"]
renderer = ["dep:image"]