[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chilly = { path = "../.." }
serenity = { version = "0.12", features = ["framework", "standard_framework"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
dirs = "5"
shuttle-runtime = "0.38"
shuttle-secrets = "0.38"
shuttle-serenity = "0.38"
shuttle-service = "0.38"
anyhow = "1"
displaydoc = "0.2"
thiserror = "1"
toml = "0.8"
